--- a/payment-failure.html
+++ b/payment-failure.html
@@ -3,27 +3,74 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FoodApp - Payment Failed</title>
-    <link rel="stylesheet" href="payment-failure.css">
+    <title>HawkersGo - Payment Failed</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="payment-failure.css" />
 </head>
 <body>
-    <main class="container" style="text-align: center;">
-        <header class="header">
-            <div class="status-icon">✕</div>
-            <h1 style="color: #333;">Payment Failed</h1>
-            <p>We couldn't process your transaction.</p>
-        </header>
-
-        <div class="error-box">
-            <p style="color: #666; font-size: 14px;">Reason: Insufficient funds or card declined. Please check your payment details and try again.</p>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+        <div class="container">
+            <a class="navbar-brand fw-bold" href="#">HawkersGo</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="Stalls.html">Stalls</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="checkout.html">Checkout</a></li>
+                </ul>
+            </div>
         </div>
+    </nav>
 
-        <button onclick="window.history.back()" class="btn retry-btn">Try Again</button>
-        <a href="Checkout.html" class="btn home-btn" style="text-decoration: none; display: block;">Return to Home</a>
+    <main class="container payment-container">
+        <div class="payment-page">
+            <header class="header">
+                <div class="status-icon">
+                    <i class="bi bi-x-lg"></i>
+                </div>
+                <h1>Payment Failed</h1>
+                <p>We couldn't process your transaction.</p>
+            </header>
 
-        <footer class="form-footer">
-            <p>Having trouble? <a href="#">Use a different card</a></p>
-        </footer>
+            <div class="error-box">
+                <p>Reason: Insufficient funds or card declined. Please check your details and try again.</p>
+            </div>
+
+            <div class="action-area">
+                <button onclick="window.history.back()" class="btn retry-btn">Try Again</button>
+                <a href="Checkout.html" class="home-link">Return to Home</a>
+            </div>
+
+            <footer class="different-card">
+                <p>Having trouble? <a href="#">Use a different card</a></p>
+            </footer>
+        </div>
     </main>
+
+    <footer class="bg-dark text-white py-4 mt-auto">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-md-4 text-center text-md-start mb-3 mb-md-0">
+                    <span class="fw-bold">HawkersGo</span>
+                </div>
+                <div class="col-md-8 text-center text-md-end">
+                    <ul class="list-inline mb-0 small">
+                        <li class="list-inline-item me-3"><a href="#" class="text-white-50 text-decoration-none">Privacy Policy</a></li>
+                        <li class="list-inline-item me-3"><a href="#" class="text-white-50 text-decoration-none">Terms</a></li>
+                        <li class="list-inline-item"><a href="#" class="text-white ms-2"><i class="bi bi-facebook"></i></a></li>
+                        <li class="list-inline-item"><a href="#" class="text-white ms-2"><i class="bi bi-instagram"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+            <hr class="mt-4 border-secondary" />
+            <div class="text-center text-white-50 small">
+                &copy; 2024 HawkersGo. All rights reserved.
+            </div>
+        </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
