--- a/Stalls.html
+++ b/Stalls.html
@@ -9,6 +9,9 @@
   <!-- Bootstrap Icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
   <link rel="stylesheet" href="Stalls.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
   <!-- Navbar -->
@@ -42,7 +45,7 @@
 
   <!-- Main Content -->
   <div class="container">
-    <h1 class="text-center">🌿 HawkersGo Stalls</h1>
+    <h1 class="title" style = text-align:center>🌿Stalls</h1>
     <main class="main">
       <section class="filter">
         <h3>Filters</h3>
