--- a/orderTracking.html
+++ b/orderTracking.html
@@ -29,14 +29,7 @@
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
           <a class="navbar-brand" href="#">
-            <img
-              src="https://via.placeholder.com/40"
-              alt="Logo"
-              width="40"
-              height="40"
-              class="d-inline-block align-text-top rounded-circle"
-            />
-            <span class="ms-2">MyBrand</span>
+            <span class="ms-2">HawkerGo</span>
           </a>
 
           <button
@@ -200,12 +193,7 @@
               href="#"
               class="text-white text-decoration-none d-flex align-items-center justify-content-center justify-content-md-start"
             >
-              <img
-                src="https://via.placeholder.com/30"
-                alt="Logo"
-                class="rounded-circle"
-              />
-              <span class="ms-2 fw-bold">MyBrand</span>
+              <span class="ms-2 fw-bold">HawkerGo</span>
             </a>
           </div>
 
