--- a/landing-page.html
+++ b/landing-page.html
@@ -9,6 +9,13 @@
                 background-color: #f5f5f5;
                 height: 100vh;
                 font-family: "DM Sans", sans-serif;
+                background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), 
+                            url('https://images.unsplash.com/photo-1739857554154-80c15b7b1af7?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+                
+                background-size: cover;
+                background-position: center;
+                background-attachment: fixed;
+                background-repeat: no-repeat;
             
             }
             div {
