--- a/vendor-dashboard.html
+++ b/vendor-dashboard.html
@@ -3,13 +3,40 @@
 <head>
     <meta charset="utf-8" />
     <title>Vendor Sales Analytics</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="vendor-dashboard.css">
 </head>
 <body>
-    <nav>SUIIIII</nav>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <div class="container">
+      <a class="navbar-brand" href="#">
+        <img
+          src="https://via.placeholder.com/40"
+          alt="Logo"
+          width="40"
+          height="40"
+          class="d-inline-block align-text-top rounded-circle"
+        />
+        <span class="ms-2">HawkersGo</span>
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="checkout.html">Logout</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <br><br><br><br><br>
 
     <h2>Stall Overview</h2>
     <section class="card">
@@ -107,7 +134,59 @@
             </div>
         </div>
     </section>
+ <footer class="bg-dark text-white py-4 mt-5">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-md-4 text-center text-md-start mb-3 mb-md-0">
+          <a
+            href="#"
+            class="text-white text-decoration-none d-flex align-items-center justify-content-center justify-content-md-start"
+          >
+            <img
+              src="https://via.placeholder.com/30"
+              alt="Logo"
+              class="rounded-circle"
+            />
+            <span class="ms-2 fw-bold">HawkersGo</span>
+          </a>
+        </div>
 
+        <div class="col-md-8 text-center text-md-end">
+          <ul class="list-inline mb-0">
+            <li class="list-inline-item me-3">
+              <a href="#" class="text-white-50 text-decoration-none"
+                >Privacy Policy</a
+              >
+            </li>
+            <li class="list-inline-item me-4">
+              <a href="#" class="text-white-50 text-decoration-none">Terms</a>
+            </li>
+
+            <li class="list-inline-item">
+              <a href="#" class="text-white ms-2"
+                ><i class="bi bi-facebook"></i> FB</a
+              >
+            </li>
+            <li class="list-inline-item">
+              <a href="#" class="text-white ms-2"
+                ><i class="bi bi-instagram"></i> IG</a
+              >
+            </li>
+            <li class="list-inline-item">
+              <a href="#" class="text-white ms-2"
+                ><i class="bi bi-twitter"></i> X</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <hr class="mt-4 border-secondary" />
+      <div class="text-center text-white-50 small">
+        &copy; 2024 HawkersGo. All rights reserved.
+      </div>
+    </div>
+  </footer>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="vendor-dashboard.js"></script>
 </body>
