--- a/landing-page.html
+++ b/landing-page.html
@@ -16,6 +16,7 @@
                 background-position: center;
                 background-attachment: fixed;
                 background-repeat: no-repeat;
+                overflow: hidden;
             
             }
             div {
