--- a/LoyaltyDiscount.html
+++ b/LoyaltyDiscount.html
@@ -80,7 +80,9 @@
                   </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
-                    <a class="dropdown-item" href="Liked Items">Liked Items</a>
+                    <a class="dropdown-item" href="likedItems.html"
+                      >Liked Items</a
+                    >
                   </li>
                 </ul>
               </li>
@@ -166,9 +168,12 @@
                   </div>
 
                   <h5 class="fw-bold">Sign Up Now</h5>
-                  <button class="btn btn-outline-dark w-100 py-2 fw-bold">
+                  <a
+                    class="btn btn-outline-dark w-100 py-2 fw-bold"
+                    href="signup-account-type.html"
+                  >
                     Sign Up!
-                  </button>
+                  </a>
                 </div>
 
                 <div class="col-lg-8">
