--- a/likedItems.html
+++ b/likedItems.html
@@ -140,7 +140,9 @@
                   </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
-                    <a class="dropdown-item" href="Liked Items">Liked Items</a>
+                    <a class="dropdown-item" href="likedItems.html"
+                      >Liked Items</a
+                    >
                   </li>
                 </ul>
               </li>
