--- a/hawker-centers-user.html
+++ b/hawker-centers-user.html
@@ -95,7 +95,7 @@
     <div class="container">
       <h1 class="title">🏬 Hawker Centers</h1>
 
-      <form action="Stalls-user.html" method="get" class="search-box">
+      <form class = "search-box">
         <div class="search-input">
           <svg
             width="20"
@@ -111,6 +111,7 @@
           <input
             type="text"
             name="search"
+            id = "searchInput"
             placeholder="Browse hawker centers and select one to view stalls"
           />
         </div>
@@ -230,5 +231,6 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src = "hawker-centers.js"></script>
   </body>
 </html>
