--- a/pages/NEA Officer/nea-inspection.html
+++ b/pages/NEA Officer/nea-inspection.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
-    <link href="nea-inspection.css" rel = stylesheet>
+    <link href="/css/nea-inspection.css" rel = stylesheet>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
@@ -272,6 +272,6 @@
       </div>
     </div>
   </footer>
-<script src="nea-inspection.js"></script>
+<script src="/js/nea-inspection.js"></script>
 </body>
 </html>
