--- a/pages/Customer/User/vendorsRating-user.html
+++ b/pages/Customer/User/vendorsRating-user.html
@@ -309,6 +309,6 @@
     <script src="../../../js/vendorsRating.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
-    <script src="firebase-init.js"></script>
+    <script src="/js/firebase-init.js"></script>
   </body>
 </html>
