--- a/pages/Customer/User/Second Menu-user.html
+++ b/pages/Customer/User/Second Menu-user.html
@@ -6,89 +6,65 @@
   <title>HawkersGo - Tian Tian Menu</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="Menu.css" />
+  <link rel="stylesheet" href="../../../css/Menu.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
-<body class = "p-0">
+<body class="p-0">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-          <a class="navbar-brand" href="#">
-            <span class="ms-2">HawkerGo</span>
-          </a>
+    <div class="container">
+      <a class="navbar-brand" href="#">
+        <span class="ms-2">HawkerGo</span>
+      </a>
 
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#mainNavbar"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-          <div class="collapse navbar-collapse" id="mainNavbar">
-            <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" href="home-page-user.html">Home</a>
+      <div class="collapse navbar-collapse" id="mainNavbar">
+        <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="home-page-user.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="hawker-centers-user.html">Order</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="customerEng-user.html">Customer Portal</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="moreDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              More
+            </a>
+            <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="moreDropdown">
+              <li>
+                <a class="dropdown-item" href="LoyaltyDiscount.html">Loyalty & Discount</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="hawker-centers-user.html">Order</a>
+              <li><hr class="dropdown-divider" /></li>
+              <li>
+                <a class="dropdown-item" href="orderTracking-user.html">Order Tracking</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link active" href="customerEng-user.html"
-                  >Customer Portal</a
-                >
-              </li>
-              <li class="nav-item dropdown">
-                <a
-                  class="nav-link dropdown-toggle"
-                  href="#"
-                  id="moreDropdown"
-                  role="button"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="false"
-                >
-                  More
-                </a>
-                <ul
-                  class="dropdown-menu dropdown-menu-dark"
-                  aria-labelledby="moreDropdown"
-                >
-                  <li>
-                    <a class="dropdown-item" href="LoyaltyDiscount.html"
-                      >Loyalty & Discount</a
-                    >
-                  </li>
-                  <li><hr class="dropdown-divider" /></li>
-                  <li>
-                    <a class="dropdown-item" href="orderTracking-user.html"
-                      >Order Tracking</a
-                    >
-                  </li>
-                  <li><hr class="dropdown-divider" /></li>
-                  <li>
-                    <a class="dropdown-item" href="likedItems-user.html"
-                      >Liked Items</a
-                    >
-                  </li>
-                </ul>
+              <li><hr class="dropdown-divider" /></li>
+              <li>
+                <a class="dropdown-item" href="likedItems-user.html">Liked Items</a>
               </li>
             </ul>
+          </li>
+        </ul>
 
-            <div class="d-flex align-items-center">
-              <a href="main-login.html" class="btn btn-light fw-bold"
-                >Log Out</a
-              >
-            </div>
-          </div>
+        <div class="d-flex align-items-center">
+          <a href="main-login.html" class="btn btn-light fw-bold">Log Out</a>
         </div>
-      </nav>
-
+      </div>
+    </div>
+  </nav>
 
   <div class="container main-container">
     <header>
-      <div class="back-btn-container"><a href="Stalls-user.html" class="back-btn">← Back</a></div>
+      <div class="back-btn-container">
+        <a href="Stalls-user.html" class="back-btn">← Back</a>
+      </div>
       <h1>🍚 Tian Tian Hainanese Chicken Rice</h1>
       <p class="subtitle">Singapore's Most Famous Chicken Rice Since 1980</p>
     </header>
@@ -96,17 +72,23 @@
     <main class="menu">
       <section class="category">
         <h2><span>🌟</span> Classic Chicken Rice Styles</h2>
-        <div id="classics-grid" class="menu-grid"></div>
+        <div id="classics-grid" class="menu-grid">
+          <!-- Items will be loaded here dynamically -->
+        </div>
       </section>
       
       <section class="category">
         <h2><span>➕</span> Add Ons</h2>
-        <div id="addons-grid" class="menu-grid"></div>
+        <div id="addons-grid" class="menu-grid">
+          <!-- Items will be loaded here dynamically -->
+        </div>
       </section>
       
       <section class="category">
         <h2><span>🥤</span> Drinks</h2>
-        <div id="drinks-grid" class="menu-grid"></div>
+        <div id="drinks-grid" class="menu-grid">
+          <!-- Items will be loaded here dynamically -->
+        </div>
       </section>
 
       <div class="checkout-section">
@@ -153,7 +135,6 @@
             <li class="list-inline-item me-4">
               <a href="#" class="text-white-50 text-decoration-none">Terms</a>
             </li>
-
             <li class="list-inline-item">
               <a href="#" class="text-white ms-2"><i class="bi bi-facebook"></i> FB</a>
             </li>
@@ -175,6 +156,9 @@
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="Menu.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
+  <script src="../../../js/firebase-init.js"></script>
+  <script src="../../../js/Menu.js"></script>
 </body>
-</html>
+</html>   
