--- a/pages/Customer/User/customerEng-user.html
+++ b/pages/Customer/User/customerEng-user.html
@@ -31,7 +31,10 @@
   <body>
     <header>
       <!-- place navbar here -->
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <nav
+        class="navbar navbar-expand-lg navbar-dark fixed-top"
+        style="background: #305652; box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2)"
+      >
         <div class="container">
           <a class="navbar-brand" href="#">
             <span class="ms-2">HawkerGo</span>
@@ -106,6 +109,7 @@
     </header>
     <main>
       <div class="container mt-5">
+        <br />
         <div class="row g-4 text-center">
           <div class="col-6 col-md-4">
             <a
@@ -180,7 +184,10 @@
       </div>
     </main>
     <!-- place footer here -->
-    <footer class="bg-dark text-white py-4 mt-5">
+    <footer
+      class="text-white py-4 mt-5"
+      style="background: #305652; box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.2)"
+    >
       <div class="container">
         <div class="row align-items-center">
           <div class="col-md-4 text-center text-md-start mb-3 mb-md-0">
