--- a/pages/NEA Officer/nea-inspection.html
+++ b/pages/NEA Officer/nea-inspection.html
@@ -23,7 +23,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="nea-login.html">Logout</a>
+                        <a class="nav-link" href="/pages/Login and Signup/main-login.html">Logout</a>
                     </li>
                 </ul>
             </div>
@@ -234,6 +234,8 @@
       </div>
     </div>
   </footer>
-<script src="nea-inspection.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
+<script src="/js/nea-inspection.js"></script>
 </body>
 </html>
